# rcli

./: .gitignore  Cargo.toml  cliff.toml  deny.toml  test.http
.github/workflows/: build.yml
fixtures/: ed25519.pk  ed25519.sk  encode.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv_opts.rs  gen_pass.rs  http.rs  mod.rs  prelude.rs  text.rs
src/process/: base64.rs  csv.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
