[package]
name = "template"
version = "0.1.0"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.29"
rand = { version = "0.9.0" }
zxcvbn = "3.1.0"
base64 = "0.22.1"
