[package]
name = "template"
version = "0.1.0"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
rand = { version = "0.8.5"}
zxcvbn = "3.1.0"
base64 = "0.22.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
blake3 = "1.5.1"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.6.8", features = ["full"] }
